--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,7 @@ h1 {
 
 .catpic {
     max-width: 100%;
+    max-height: 50vh;
     object-fit: cover;
     border-radius: 10px;
 }
@@ -29,6 +30,8 @@ h1 {
 input {
     background: hsl(214, 100%, 93%);
     border-radius: 5px;
+    padding: 5px;
+    margin: 20px;
 }
 
 
